@@ -3,6 +3,7 @@ LEIA - Fix for scrollbars
 LEIA - DialogAddonSettings
 LEIA - Change fanart to Leia version
 Watched Indicators update
+Rearrange skin settings
 
 [B]0.9.11[/B]
 Add support for AEL metadata
